[gd_scene load_steps=20 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://default_env.tres" type="Environment" id=6]
[ext_resource path="res://ground_mesh.tres" type="CubeMesh" id=7]
[ext_resource path="res://Cyan.tres" type="Material" id=8]
[ext_resource path="res://FPSLabel.gd" type="Script" id=9]
[ext_resource path="res://Boundary.gd" type="Script" id=10]
[ext_resource path="res://GodotPowerUp.tscn" type="PackedScene" id=11]
[ext_resource path="res://Flag3DScene.tscn" type="PackedScene" id=12]
[ext_resource path="res://Pause.gd" type="Script" id=13]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.478431, 0.129412, 1 )

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -14.0931, 0, -15.9795, 0, 0, 0, 0, 0, 0, -14.0931, 0, 16.804, 0, 0, 0, 0, 0, 0, 13.8781, 0, 16.9544, 0, 0, 0, 0, 0, 0, 13.8781, 0, -15.9795, 0, 0, 0, 0, 0, 0, -14.0931, 0, -15.9795 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="BoxShape" id=6]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Flag3DScene" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.6379, 1.85172, -27.0031 )

[node name="Map" type="Spatial" parent="."]

[node name="Ground" type="StaticBody" parent="Map"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Map/Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.952113, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Map/Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 8 )

[node name="Ground2" type="StaticBody" parent="Map"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -110.626 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Map/Ground2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.01119, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Map/Ground2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 8 )

[node name="Bridge" type="StaticBody" parent="Map"]
transform = Transform( 1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 6.75822, -59 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Bridge"]
transform = Transform( 6, 0, 0, 0, 1, 0, 0, 0, 29.9, 0, 0, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Map/Bridge"]
transform = Transform( -0.2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 40, 0 )
shadow_enabled = true

[node name="Player" parent="." groups=[
"players",
] instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.127, 0.835 )
collision_mask = 524302

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19 )
size = 19.0

[node name="Cylinders" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, -16 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 17 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -16 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 17 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 5 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 0.271842, 0, -0.962342, 0, 1, 0, 0.962342, 0, 0.271842, -14.0931, 0, -15.9795 )
rotation_mode = 1

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="UserInterface"]
margin_left = 24.0
margin_top = 16.0
margin_right = 75.0
margin_bottom = 30.0
text = "Score: 0"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" type="Label" parent="UserInterface"]
margin_left = 24.0
margin_top = 672.0
margin_right = 112.0
margin_bottom = 704.0
text = "FPS: 0"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="ColorRect" parent="UserInterface"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )

[node name="Label" type="Label" parent="UserInterface/Retry"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -15.5
margin_bottom = 15.5
text = "Press enter to retry"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 6 )

[node name="Boundary" type="Area" parent="."]
transform = Transform( -9.5744, 0, 0, 0, -0.2, 0, 0, 0, -9.5744, 0, -25, 0 )
collision_layer = 524288
collision_mask = 0
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="Boundary"]
transform = Transform( 30.1979, 0, 0, 0, 1, 0, 0, 0, 30.1979, 0, 0, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Boundary"]
visible = false
mesh = ExtResource( 7 )
material/0 = null

[node name="GodotPowerUp" parent="." instance=ExtResource( 11 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 3.5, -22 )

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Pause/HBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
text = "Resume"

[node name="ExitButton" type="Button" parent="Pause/HBoxContainer"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
text = "Exit"

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="body_entered" from="Boundary" to="Boundary" method="_on_Boundary_body_entered"]
[connection signal="pressed" from="Pause/HBoxContainer/ResumeButton" to="Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause/HBoxContainer/ExitButton" to="Pause" method="_on_ExitButton_pressed"]
